--- a/styles/style.css
+++ b/styles/style.css
@@ -1,22 +1,297 @@
 @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap');
 
-*,*::after,*::before{
+*,*::after,*::before
+{
   margin:0;
   padding:0;
   box-sizing:border-box;
 }
 
 :root{
-  --clr-strong cyan:#26BAA4;
-  --clr-light blue:#6173FF;
-  --clr-darkgrayish blue:#4C545D;
-  --clr-grayish blue:#9FABB2; 
+  --clr-strongcyan:#26BAA4;
+  --clr-lightblue:#6173FF;
+  --clr-darkgrayishblue:#4C545D;
+  --clr-grayishblue:#9FABB2; 
 }
 
 html{
   font-size: 18px;
 }
-.body {
+body {
   font-family: 'Bai Jamjuree', sans-serif;
-  background-color: red;
+}
+header .image{
+  position:absolute;
+}
+
+header .container{
+  background-repeat: no-repeat;
+  align-items: center;
+  text-align:center;
+  height: 100vh;
+  padding: 100px;
+}
+header .container .logo{
+  padding: 70px;
+}
+header .container .logo .p{
+  font-weight: 500;
+}
+header .h1 .p{
+  padding: 15px;
+  width: 35px;
+  margin: auto;
+}
+a{
+  text-decoration: none;
+  color:#26BAA4;
+  transition: 0.4s;
+}
+a:hover{
+  color:hwb(201 11% 66%);
+}
+.btn{
+  margin-top: 40px;
+  color:#fff;
+  transition: 0.4s;
+}
+.btn a:hover{
+  color: #fff;
+}
+.btn-1,.btn-2{
+  border-radius: 25px;
+  padding: 10px 20px;
+  color:#fff;
+  margin:0 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0,0,0,0.2);
+}
+.btn-1{
+  background-color:var(--clr-strongcyan);
+}
+.btn-1:hover{
+  background-color: hsl(171,66%,44%);
+}
+.btn-2{
+  background-color: var(--clr-lightblue);
+}
+.btn-2:hover{
+  background-color: hsl(233,100%,69%);
+}
+h1{
+  color:hsl(210, 10%, 33%);
+}
+p{
+  color: hsl(201, 11%, 6%);
+}
+.top{
+  text-align:center;
+}
+.top h2{
+  font-size: 30px;
+}
+.top p{
+  width: 750px;
+  margin: auto;
+  padding-top: 20px;
+}
+.track-col{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 50px;
+}
+.track-left{
+  flex-basis: 45%;
+  margin-left: -5%;
+}
+.track-left img{
+  width: 100%;
+}
+.track-right{
+  flex-basis: 30%;
+  margin-right: 15%;
+}
+.track-right .items{
+  margin-bottom: 30px;
+}
+.track-right .items h3{
+  font-size: 25px;
+}
+.clipboard{
+  padding-top: 100px;
+}
+.clipboard-col{
+  text-align: center;
+  padding-top: 100px;
+}
+.clipboard-col img{
+  width: 50%;
+}
+.workflow-col{
+  display: flex;
+  justify-content: center;
+  width: 85%;
+  margin: 0 auto;
+}
+.workflow-col .item{
+  text-align: center;
+  flex-basis: 30%;
+}
+.item img{
+  padding-bottom: 20px;
+  padding-top: 50px;
+  width: 50px;
+  height: 100px;
+}
+.item h3{
+  padding-bottom: 20px;
+}
+.com-logo{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 85%;
+  margin: 0 auto;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.com-logo img{
+  width: 100px;
+}
+.content{
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 150px;
+}
+.content h1{
+  font-size: 35px;
+}
+.content p{
+  width: 600px;
+  margin: auto;
+}
+.footer{
+  background-color:hsla(200, 11%, 66%,0.08);
+  padding-top: 50px;
+}
+.footer-col{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  width: 85%;
+  margin: auto;
+}
+.footer-left{
+  display: flex;
+  justify-content: space-between;
+  flex-basis: 60%;
+}
+.footer-left img{
+  width: 50px;
+  cursor: pointer;
+}
+.footer-left p{
+  padding-bottom: 20px;
+}
+.footer-right img{
+  margin-left: 20px;
+  width: 20px;
+  cursor: pointer;
+  transition: 0.4s;
+}
+@media (max-width:768px){
+  header{
+    background-image: url(images/bg-header-mobile.png);
+    background-size: cover;
+    padding-top: 50px;
+  }
+  header h1{
+    padding:30px 50px 10px;
+  }
+  header p{
+    padding: 10px 50px 10px;
+    width: 100%;
+  }
+  .btn{
+width: 85%;
+margin: auto;
+  }
+  .btn-1, .btn-2{
+    margin-top: 20px;
+    display: block;
+    padding: 15px;
+  }
+  .top{
+    padding-top: 100px;
+  }
+  .top h2{
+    padding: 0px 40px;
+  }
+  .top p{
+    width: 100px;
+    padding: 20px 50px;
+  }
+  .track-col{
+flex-direction: column;
+text-align: center;
+  }
+  .track-left{
+    width: 100%;
+    padding: 10px 30px;
+    margin: 0;
+  }
+  .track-right{
+    width: 100%;
+    padding: 25% 30%;
+    margin: 0;
+  }
+  .clipboard{
+    padding-top: 0px;
+  }
+  .clipboard-col img{
+    width: 90%;
+  }
+  .com-logo{
+    flex-direction:column;
+  }
+  .workflow-col{
+    flex-direction: column;
+  }
+  .com-logo img{
+    margin: 20px auto;
+  }
+  .content h1{
+    padding: 30px 50px 10px;
+  }
+  .content p{
+    padding: 10px 50px;
+    width: 100%;
+  }
+  .footer-col{
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-left{
+    flex-direction: column;
+  }
+  .footer-left .col:first-child{
+    padding-bottom: 30px;
+  }
+  .footer-right{
+    padding-top: 30px;
+    padding-bottom: 50px;
+  }
+  .footer-right img{
+    width: 25%;
+    margin: 0;
+  }
+  .footer-right img:nth-child(2){
+    margin: 0 30px;
+
+  }
+}
+@media (max-width:350px){
+  .top{
+    padding-top: 200px;
+  }
 }
